force-app/main/default/objects/eCard_Discrepancy__x/eCard_Discrepancy__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$ecard_discrepancy</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$ecard_discrepancy</externalName>
    <label>eCard_Discrepancy</label>
    <pluralLabel>eCard_Discrepancies</pluralLabel>
</CustomObject>