force-app/main/default/objects/eCard_Discrepancy__x/fields/Bus_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bus_Start_Date__c</fullName>
    <description>Bus_Start_Date</description>
    <externalDeveloperName>Bus_Start_Date</externalDeveloperName>
    <label>Bus_Start_Date</label>
    <type>Date</type>
</CustomField>