force-app/main/default/objects/eCard_Discrepancy__x/fields/Bus_Start_Seq__c.field-meta.xml
<CustomField>
    <fullName>Bus_Start_Seq__c</fullName>
    <description>Bus_Start_Seq</description>
    <externalDeveloperName>Bus_Start_Seq</externalDeveloperName>
    <label>Bus_Start_Seq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>