force-app/main/default/objects/eCard_Discrepancy__x/fields/Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Cut_Off_Date__c</fullName>
    <description>Cut_Off_Date</description>
    <externalDeveloperName>Cut_Off_Date</externalDeveloperName>
    <label>Cut_Off_Date</label>
    <type>Date</type>
</CustomField>