force-app/main/default/objects/eCard_Discrepancy__x/fields/Defect__c.field-meta.xml
<CustomField>
    <fullName>Defect__c</fullName>
    <description>Defect</description>
    <externalDeveloperName>Defect</externalDeveloperName>
    <label>Defect</label>
    <length>200</length>
    <type>Text</type>
</CustomField>