force-app/main/default/objects/eCard_Discrepancy__x/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department</description>
    <externalDeveloperName>Department</externalDeveloperName>
    <label>Department</label>
    <length>200</length>
    <type>Text</type>
</CustomField>