force-app/main/default/objects/eCard_Discrepancy__x/fields/Discrepancy_Priority__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Priority__c</fullName>
    <description>Discrepancy_Priority</description>
    <externalDeveloperName>Discrepancy_Priority</externalDeveloperName>
    <label>Discrepancy_Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>