force-app/main/default/objects/eCard_Discrepancy__x/fields/Foreman2__c.field-meta.xml
<CustomField>
    <fullName>Foreman2__c</fullName>
    <description>Foreman2</description>
    <externalDeveloperName>Foreman2</externalDeveloperName>
    <label>Foreman2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>