force-app/main/default/objects/eCard_Discrepancy__x/fields/Foreman4__c.field-meta.xml
<CustomField>
    <fullName>Foreman4__c</fullName>
    <description>Foreman4</description>
    <externalDeveloperName>Foreman4</externalDeveloperName>
    <label>Foreman4</label>
    <length>254</length>
    <type>Text</type>
</CustomField>