force-app/main/default/objects/eCard_Discrepancy__x/fields/Front_Axle_Weight__c.field-meta.xml
<CustomField>
    <fullName>Front_Axle_Weight__c</fullName>
    <description>Front_Axle_Weight</description>
    <externalDeveloperName>Front_Axle_Weight</externalDeveloperName>
    <label>Front_Axle_Weight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>