force-app/main/default/objects/eCard_Discrepancy__x/fields/Has_Issue_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Has_Issue_Reopened__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has_Issue_Reopened</description>
    <externalDeveloperName>Has_Issue_Reopened</externalDeveloperName>
    <label>Has_Issue_Reopened</label>
    <type>Checkbox</type>
</CustomField>