force-app/main/default/objects/eCard_Discrepancy__x/fields/Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Modified_By__c</fullName>
    <description>Modified_By</description>
    <externalDeveloperName>Modified_By</externalDeveloperName>
    <label>Modified_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>