force-app/main/default/objects/eCard_Discrepancy__x/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <description>Raised_By</description>
    <externalDeveloperName>Raised_By</externalDeveloperName>
    <label>Raised_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>