force-app/main/default/objects/eCard_Discrepancy__x/fields/Resolved_Status_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Status_Updated_By__c</fullName>
    <description>Resolved_Status_Updated_By</description>
    <externalDeveloperName>Resolved_Status_Updated_By</externalDeveloperName>
    <label>Resolved_Status_Updated_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>