force-app/main/default/objects/eCard_Discrepancy__x/fields/Resolved_Status_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Status_Updated_Date__c</fullName>
    <description>Resolved_Status_Updated_Date</description>
    <externalDeveloperName>Resolved_Status_Updated_Date</externalDeveloperName>
    <label>Resolved_Status_Updated_Date</label>
    <type>DateTime</type>
</CustomField>