force-app/main/default/objects/eCard_Discrepancy__x/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Root_Cause</description>
    <externalDeveloperName>Root_Cause</externalDeveloperName>
    <label>Root_Cause</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>