force-app/main/default/objects/eCard_Discrepancy__x/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <description>Schedule_Date</description>
    <externalDeveloperName>Schedule_Date</externalDeveloperName>
    <label>Schedule_Date</label>
    <type>Date</type>
</CustomField>