force-app/main/default/objects/eCard_Discrepancy__x/fields/Scheduled_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Delivery_Date__c</fullName>
    <description>Scheduled_Delivery_Date</description>
    <externalDeveloperName>Scheduled_Delivery_Date</externalDeveloperName>
    <label>Scheduled_Delivery_Date</label>
    <type>Date</type>
</CustomField>