force-app/main/default/objects/eCard_Discrepancy__x/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <description>Verified_By</description>
    <externalDeveloperName>Verified_By</externalDeveloperName>
    <label>Verified_By</label>
    <length>254</length>
    <type>Text</type>
</CustomField>